--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,9 @@
   --foreground-rgb: 0, 0, 0;
   --background: 255, 255, 255;
 }
+html{
+  scroll-behavior: smooth auto scroll;
+}
 
 @media (prefers-color-scheme: dark) {
   :root {
