--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,7 @@
   --background: 255, 255, 255;
 }
 html{
-  scroll-behavior: smooth auto scroll;
+  scroll-behavior: smooth;
 }
 
 @media (prefers-color-scheme: dark) {
