--- a/style/index.module.css
+++ b/style/index.module.css
@@ -10,21 +10,21 @@
     }
 
     .cardbgimage1 {
-        background: url('/image/accesscontrol.svg') no-repeat;
+        background: url('/image/accesscontrol.jpg') no-repeat;
         background-size: cover;
     }
 
     .cardbgimage2 {
-        background: url('/image/networkaudio.svg') no-repeat;
+        background: url('/image/networkaudio.jpg') no-repeat;
         background-size: cover;
     }
 
     .cardbgimage3 {
-        background: url('/image/networkcam.svg') no-repeat;
+        background: url('/image/networkcam.jpg') no-repeat;
         background-size: cover;
     }
 
     .cardbgimage4 {
-        background: url('/image/networkintercomunication.svg') no-repeat;
+        background: url('/image/networkintercomunication.jpg') no-repeat;
         background-size: cover;
     }
